--- a/WebContent/member/newbaby/horoscope/index.xhtml
+++ b/WebContent/member/newbaby/horoscope/index.xhtml
@@ -41,129 +41,7 @@ xmlns:p="http://primefaces.org/ui">
           <!--logo start-->
           <a href="/smrtbaby" class="logo" >Smart<span>Babies</span></a>
           <!--logo end-->
-          <div class="nav notify-row" id="top_menu">
-            <!--  notification start -->
-            <ul class="nav top-menu">
-              <!-- inbox dropdown start-->
-              <li id="header_inbox_bar" class="dropdown">
-                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                      <i class="icon-envelope-alt"></i>
-                      <span class="badge bg-important">5</span>
-                  </a>
-                  <ul class="dropdown-menu extended inbox">
-                      <div class="notify-arrow notify-arrow-red"></div>
-                      <li>
-                          <p class="red">You have 5 new messages</p>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini.jpg"/></span>
-                                    <span class="subject">
-                                    <span class="from">Jonathan Smith</span>
-                                    <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hello, this is an example msg.
-                                    </span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini2.jpg"/></span>
-                                    <span class="subject">
-                                    <span class="from">Jhon Doe</span>
-                                    <span class="time">10 mins</span>
-                                    </span>
-                                    <span class="message">
-                                     Hi, Jhon Doe Bhai how are you ?
-                                    </span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini3.jpg"/></span>
-                                    <span class="subject">
-                                    <span class="from">Jason Stathum</span>
-                                    <span class="time">3 hrs</span>
-                                    </span>
-                                    <span class="message">
-                                        This is awesome dashboard.
-                                    </span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini4.jpg"/></span>
-                                    <span class="subject">
-                                    <span class="from">Jondi Rose</span>
-                                    <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hello, this is metrolab
-                                    </span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">See all messages</a>
-                      </li>
-                  </ul>
-              </li>
-              <!-- inbox dropdown end -->
-              <!-- notification dropdown start-->
-              <li id="header_notification_bar" class="dropdown">
-                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-
-                      <i class="icon-bell-alt"></i>
-                      <span class="badge bg-warning">7</span>
-                  </a>
-                  <ul class="dropdown-menu extended notification">
-                      <div class="notify-arrow notify-arrow-yellow"></div>
-                      <li>
-                          <p class="yellow">You have 7 new notifications</p>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="label label-danger"><i class="icon-bolt"></i></span>
-                              Server #3 overloaded.
-                              <span class="small italic">34 mins</span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="label label-warning"><i class="icon-bell"></i></span>
-                              Server #10 not respoding.
-                              <span class="small italic">1 Hours</span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="label label-danger"><i class="icon-bolt"></i></span>
-                              Database overloaded 24%.
-                              <span class="small italic">4 hrs</span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="label label-success"><i class="icon-plus"></i></span>
-                              New user registered.
-                              <span class="small italic">Just now</span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">
-                              <span class="label label-info"><i class="icon-bullhorn"></i></span>
-                              Application error.
-                              <span class="small italic">10 mins</span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="#">See all notifications</a>
-                      </li>
-                  </ul>
-              </li>
-              <!-- notification dropdown end -->
-          </ul>
-          </div>
+          
           <div class="top-nav ">
               <ul class="nav pull-right top-menu">
                   <!-- user login dropdown start-->
@@ -172,12 +50,14 @@ xmlns:p="http://primefaces.org/ui">
                           <img alt="" src="../../../frontend/member/img/avatar1_small.jpg"/>
                           <span class="username">Batuhan ÇIKRIKCI</span>
                           <b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu extended logout">
+                      </a><ul class="dropdown-menu extended logout">
                           <li><a href="/smrtbaby/member/profile"><i class="icon-suitcase"></i>Profil</a></li>
                           <li><a href="/smrtbaby/member/profile/edit"><i class="icon-edit"></i>Profil Düzenle</a></li>
-                          <li><a href="/smrtbaby/member/profile/activity"><i class="icon-bell-alt"></i>Aktiviteler</a></li>
-                          <li><a href="/smrtbaby/login"><i class="icon-key"></i>Çıkış</a></li>
+                          <li>
+                          <h:form>
+                          <h:commandButton styleClass="icon-key" value="Çıkış" action="#{UserLoginLogout.logout()}" />                          
+                          </h:form>
+                          </li>
                       </ul>
                   </li>
                   <!-- user login dropdown end -->
@@ -235,12 +115,6 @@ xmlns:p="http://primefaces.org/ui">
                           <li><a href="/smrtbaby/member/pregnancy/physiological">Fizyolojik</a></li>
                           <li><a href="/smrtbaby/member/pregnancy/psychological">Psikolojik</a></li>
                       </ul>
-                  </li>
-                  <li>
-                      <a href="/smrtbaby/member/calendar">
-                          <i class="icon-calendar"></i>
-                          <span>Takvim</span>
-                      </a>
                   </li>
                   <li class="sub-menu" >
                       <a href="javascript:;">
