--- a/WebContent/member/checks/vaccine/index.xhtml
+++ b/WebContent/member/checks/vaccine/index.xhtml
@@ -32,8 +32,8 @@
 
 	<script type="text/javascript"
 		src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript"
-		src="../../../resources/js/vaccine.js"></script>
+
+	<script type="text/javascript" src="../../../resources/js/vaccine.js"></script>
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
 	<!--[if lt IE 9]>
       <script src="../../../frontend/member/js/html5shiv.js"></script>
@@ -51,98 +51,28 @@
 	</div>
 	<!--logo start--> <a href="/smrtbaby" class="logo">Smart<span>Babies</span></a>
 	<!--logo end-->
-	<div class="nav notify-row" id="top_menu">
-		<!--  notification start -->
-		<ul class="nav top-menu">
-			<!-- inbox dropdown start-->
-			<li id="header_inbox_bar" class="dropdown"><a
-				data-toggle="dropdown" class="dropdown-toggle" href="#"> <i
-					class="icon-envelope-alt"></i> <span class="badge bg-important">5</span>
-			</a>
-				<ul class="dropdown-menu extended inbox">
-					<div class="notify-arrow notify-arrow-red"></div>
-					<li>
-						<p class="red">You have 5 new messages</p>
-					</li>
-					<li><a href="#"> <span class="photo"><img
-								alt="avatar" src="../../../frontend/member/img/avatar-mini.jpg" /></span>
-							<span class="subject"> <span class="from">Jonathan
-									Smith</span> <span class="time">Just now</span>
-						</span> <span class="message"> Hello, this is an example msg. </span>
-					</a></li>
-					<li><a href="#"> <span class="photo"><img
-								alt="avatar" src="../../../frontend/member/img/avatar-mini2.jpg" /></span>
-							<span class="subject"> <span class="from">Jhon Doe</span>
-								<span class="time">10 mins</span>
-						</span> <span class="message"> Hi, Jhon Doe Bhai how are you ? </span>
-					</a></li>
-					<li><a href="#"> <span class="photo"><img
-								alt="avatar" src="../../../frontend/member/img/avatar-mini3.jpg" /></span>
-							<span class="subject"> <span class="from">Jason
-									Stathum</span> <span class="time">3 hrs</span>
-						</span> <span class="message"> This is awesome dashboard. </span>
-					</a></li>
-					<li><a href="#"> <span class="photo"><img
-								alt="avatar" src="../../../frontend/member/img/avatar-mini4.jpg" /></span>
-							<span class="subject"> <span class="from">Jondi
-									Rose</span> <span class="time">Just now</span>
-						</span> <span class="message"> Hello, this is metrolab </span>
-					</a></li>
-					<li><a href="#">See all messages</a></li>
-				</ul></li>
-			<!-- inbox dropdown end -->
-			<!-- notification dropdown start-->
-			<li id="header_notification_bar" class="dropdown"><a
-				data-toggle="dropdown" class="dropdown-toggle" href="#"> <i
-					class="icon-bell-alt"></i> <span class="badge bg-warning">7</span>
-			</a>
-				<ul class="dropdown-menu extended notification">
-					<div class="notify-arrow notify-arrow-yellow"></div>
-					<li>
-						<p class="yellow">You have 7 new notifications</p>
-					</li>
-					<li><a href="#"> <span class="label label-danger"><i
-								class="icon-bolt"></i></span> Server #3 overloaded. <span
-							class="small italic">34 mins</span>
-					</a></li>
-					<li><a href="#"> <span class="label label-warning"><i
-								class="icon-bell"></i></span> Server #10 not respoding. <span
-							class="small italic">1 Hours</span>
-					</a></li>
-					<li><a href="#"> <span class="label label-danger"><i
-								class="icon-bolt"></i></span> Database overloaded 24%. <span
-							class="small italic">4 hrs</span>
-					</a></li>
-					<li><a href="#"> <span class="label label-success"><i
-								class="icon-plus"></i></span> New user registered. <span
-							class="small italic">Just now</span>
-					</a></li>
-					<li><a href="#"> <span class="label label-info"><i
-								class="icon-bullhorn"></i></span> Application error. <span
-							class="small italic">10 mins</span>
-					</a></li>
-					<li><a href="#">See all notifications</a></li>
-				</ul></li>
-			<!-- notification dropdown end -->
-		</ul>
-	</div>
+	
 	<div class="top-nav ">
 		<ul class="nav pull-right top-menu">
 			<!-- user login dropdown start-->
-			<li class="dropdown"><a data-toggle="dropdown"
-				class="dropdown-toggle" href="#"> <img alt=""
-					src="../../../frontend/member/img/avatar1_small.jpg" /> <span
-					class="username">Batuhan ÇIKRIKCI</span> <b class="caret"></b>
-			</a>
-				<ul class="dropdown-menu extended logout">
-					<li><a href="/smrtbaby/member/profile"><i
-							class="icon-suitcase"></i>Profil</a></li>
-					<li><a href="/smrtbaby/member/profile/edit"><i
-							class="icon-edit"></i>Profil Düzenle</a></li>
-					<li><a href="/smrtbaby/member/profile/activity"><i
-							class="icon-bell-alt"></i>Aktiviteler</a></li>
-					<li><a href="/smrtbaby/login"><i class="icon-key"></i>Çıkış</a></li>
-				</ul></li>
+			<li class="dropdown">
+                      <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                          <img alt="" src="../../frontend/member/img/avatar1_small.jpg"/>
+                          <span class="username">
+                          #{UserLoginLogout.currentUser.userName} #{UserLoginLogout.currentUser.userSurname}
+                          </span>
+                          <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu extended logout">
+                          <li><a href="/smrtbaby/member/profile"><i class="icon-suitcase"></i>Profil</a></li>
+                          <li><a href="/smrtbaby/member/profile/edit"><i class="icon-edit"></i>Profil Düzenle</a></li>
+                          <li>
+                          <h:form>
+                          <h:commandButton styleClass="icon-key" value="Çıkış" action="#{UserLoginLogout.logout()}" />                          
+                          </h:form>
+                          </li>
+                      </ul>
+                  </li>
 			<!-- user login dropdown end -->
 		</ul>
 	</div>
@@ -181,9 +111,6 @@
 					<li><a href="/smrtbaby/member/pregnancy/physiological">Fizyolojik</a></li>
 					<li><a href="/smrtbaby/member/pregnancy/psychological">Psikolojik</a></li>
 				</ul></li>
-			<li><a href="/smrtbaby/member/calendar"> <i
-					class="icon-calendar"></i> <span>Takvim</span>
-			</a></li>
 			<li class="sub-menu"><a href="javascript:;"> <i
 					class="icon-user-md"></i> <span>Doktorum</span>
 			</a>
@@ -205,8 +132,8 @@
 
 				<div class="task-content">
 
-					<ul id="taskList" class="task-list" >
-						
+					<ul id="taskList" class="task-list">
+
 					</ul>
 				</div>
 			</div>
@@ -250,6 +177,5 @@
 			$("#sortable").disableSelection();
 		});
 	</script>
-
 </h:body>
 </html>
