--- a/WebContent/member/newbaby/horoscope/index.xhtml
+++ b/WebContent/member/newbaby/horoscope/index.xhtml
@@ -55,7 +55,7 @@ xmlns:p="http://primefaces.org/ui">
                           <li><a href="/smrtbaby/member/profile/edit"><i class="icon-edit"></i>Profil Düzenle</a></li>
                           <li>
                           <h:form>
-                          <h:commandButton styleClass="icon-key" value="Çıkış" action="#{UserLoginLogout.logout()}" />                          
+                           <h:commandLink action="#{UserLoginLogout.logout()}"><i class="icon-key"></i> Çıkış</h:commandLink>                          
                           </h:form>
                           </li>
                       </ul>
